src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/*
    Tailwind colors listed here: https://tailwindcss.com/docs/customizing-colors

    Why colors are written in rgb format (255 255 255) instead of hex (#ffffff)
    https://tailwindcss.com/docs/customizing-colors#using-css-variables
*/
@layer base {

    /* light theme */
    .theme {
        /* Tailwind orange-500 #f97316 */
        --color-primary-main: 249 115 22;

        /* Tailwind gray-700 #374151 */
        --color-text-body: 55 65 81;
        /* Tailwind gray-700 #374151 */
        --color-text-heading: 55 65 81;
        /* Tailwind gray-700 #374151 */
        --color-text-bold: 55 65 81;
        /* Tailwind gray-500 #6b7280 */
        --color-text-muted: 107 114 128;
        /* Tailwind orange-500 #f97316 */
        --color-text-link: 249 115 22;
        /* black */
        --color-text-code: 0 0 0;
        /* black */
        --color-text-selection: 0 0 0;

        /* white */
        --color-bg-body: 255 255 255;
        /* Tailwind orange-50 #fff7ed */
        --color-bg-code: 255 247 237;
        /* Tailwind amber-200 #fde68a */
        --color-bg-selection: 253 230 138;

        /* Tailwind orange-100 #ffedd5 */
        --color-border-code: 255 237 213;

    }

    /* dark theme */
    .theme.dark {
        /* Tailwind yellow-400 #facc15 */
        --color-primary-main: 250 204 21;

        /* Tailwind stone-300 #d6d3d1 */
        --color-text-body: 214 211 209;
        /* white */
        --color-text-heading: 255 255 255;
        /* white */
        --color-text-bold: 255 255 255;
        /* Tailwind stone-400 #a8a29e */
        --color-text-muted: 168 162 158;
        /* Tailwind yellow-400 #facc15 */
        --color-text-link: 250 204 21;
        /* black */
        --color-text-code: 255 255 255;
        /* black */
        --color-text-selection: 0 0 0;

        /* #0e141b */
        --color-bg-body: 14 20 27;
        /* Tailwind yellow-500 #eab308 */
        --color-bg-code: 234 179 8;
        /* Tailwind yellow-300 #fde047 */
        --color-bg-selection: 253 224 71;

        /* Tailwind yellow-100 #fef9c3 */
        --color-border-code: 254 243 199;
    }

    :root {
        background-color: theme('colors.bg.body');
        color: theme('colors.text.body');
    }

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
        font-family: theme('fontFamily.heading');
    }
}

@layer components {

    /* ------ GLOBAL STYLES - START ------ */
    strong {
        font-weight: 600;
        color: theme('colors.text.bold');
    }

    mark {
        background-color: theme('colors.bg.selection');
        color: theme('colors.text.selection');
    }

    code:not(pre code):not(.unset) {
        background-color: theme('colors.bg.code');
        color: theme('colors.text.code');
        padding: 0.125rem 0.25rem;
        border-radius: 0.25rem;
        font-size: 0.875em;
        font-weight: 600;
        border: 1px solid theme('colors.border.code');
        margin-bottom: 1.25em;
    }

    html.dark code:not(pre code) {
        background-color: rgb(var(--color-bg-code) / 0.15);
        border-color: rgb(var(--color-border-code) / 0.15);
    }

    ::selection {
        background: theme('colors.bg.selection');
        color: theme('colors.text.selection');
    }

    /* ------ GLOBAL STYLES - END ------ */

}

